--- a/wp-content/themes/wedding/src/sass/base/_common.scss
+++ b/wp-content/themes/wedding/src/sass/base/_common.scss
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,300;0,400;0,500;0,700;0,900;1,300;1,400;1,500;1,700;1,900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Playball&display=swap');
 @import '../abstracts/mixin';
 
 /* common */
@@ -12,7 +12,7 @@
 }
 
 body {
-  font-family: 'Roboto', sans-serif;
+  font-family: 'Playball', cursive;
   font-size: 16px;
   margin: 0;
   color: var(--color-text-primary);
