Update code Fix Admin Banner

--- a/wp-content/plugins/wedding/src/blocks/BannerNewImg/style.scss
+++ b/wp-content/plugins/wedding/src/blocks/BannerNewImg/style.scss
@@ -129,7 +129,7 @@
 
       .ttl {
         font-size: 41px;
-        color: #454545;
+        color: #091932;
         margin: 10px 0;
         line-height: 1;
         font-weight: 900;
@@ -138,7 +138,7 @@
       .sub {
         font-size: 26px;
         font-weight: 400;
-        color: #454545;
+        color: #091932;
       }
 
       .btn-wrapper {
@@ -273,7 +273,7 @@
       font-size: 30px;
 
       li {
-        color: #fff;
+        color: #091932;
         font-size: 20px;
 
         &:not(:first-child) {
@@ -283,7 +283,7 @@
         span {
           width: 70px;
           display: flex;
-          border: 2px solid #fff;
+          border: 2px solid #091932;
           border-radius: 50%;
           justify-content: center;
           align-items: center;
