Update code ServiceNew

--- a/wp-content/themes/wedding/src/sass/base/_var.scss
+++ b/wp-content/themes/wedding/src/sass/base/_var.scss
@@ -1,6 +1,6 @@
 :root {
   --color-main: #01B9EA;
-  --color-text-primary: #606060;
+  --color-text-primary: #ff4061;
   --color-text-secondary: #fff;
   --color-text-third: #01b9ea;
   --color-text-forth: #f2f2f2;
