--- a/wp-content/plugins/wedding/src/blocks/ServiceNew/style.scss
+++ b/wp-content/plugins/wedding/src/blocks/ServiceNew/style.scss
@@ -16,40 +16,10 @@
     justify-content: space-between;
 
     .lnk {
-      width: calc((100% / 2) - 12px);
+      width: calc((100% / 2) - 70px);
       margin-bottom: 24px;
       position: relative;
-      border-radius: 8px;
-      background: #D6E8F9;
       overflow: hidden;
-
-      &::after {
-        content: '';
-        left: 0;
-        position: absolute;
-        background: url("../../../assets/img/blocks/service/service-bg.png");
-        display: block;
-        width: 100%;
-        bottom: 0;
-        background-repeat: no-repeat;
-        background-size: cover;
-        height: 70%;
-        right: 0;
-        opacity: 0;
-      }
-
-      &::before {
-        content: '';
-        position: absolute;
-        display: inline-block;
-        width: 100%;
-        height: 100%;
-        z-index: 1;
-        top: 0;
-        left: 0;
-        background: #358BDB;
-        opacity: 0;
-      }
 
       .item-media {
         width: 100%;
@@ -60,26 +30,91 @@
           justify-content: center;
           object-fit: contain;
           transition: transform 1s;
-          padding: 38px 42px 47px;
-          height: 430px;
+          height: 450px;
+          position: relative;
 
           img {
-            object-fit: contain;
+            position: absolute;
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+            object-position: top;
+            padding: 14px;
+          }
+
+          .bride-border-box {
+            position: absolute;
+            width: 100%;
+            height: 100%;
+
+            span {
+              position: absolute;
+              height: 54px;
+              width: 54px;
+              transition: all ease-in-out .9s;
+              -webkit-transition: all ease-in-out .9s;
+              &:nth-child(1) {
+                  right: 0;
+                  top: 0;
+                  border-top: 5px solid;
+                  border-right: 5px solid;
+                  border-color: #ff4061;
+              }
+              &:nth-child(2) {
+                  right: 0;
+                  bottom: 0;
+                  border-bottom: 5px solid;
+                  border-right: 5px solid;
+                  border-color: #ff4061;
+              }
+
+              &:nth-child(3) {
+                  left: 0;
+                  bottom: 0;
+                  border-bottom: 5px solid;
+                  border-left: 5px solid;
+                  border-color: #ff4061;
+              }
+              &:nth-child(4) {
+                  left: 0;
+                  top: 0;
+                  border-top: 5px solid;
+                  border-left: 5px solid;
+                  border-color: #ff4061;
+              }
+            }
+          }
+
+          &:hover {
+            .bride-groom-border{
+              width: 60%;
+              height: 60%;
+            }
+          }
+        }
+
+        .link {
+          display: block;
+          color: #091932;
+
+          &:hover {
+            color: #ff4061;
+            transition: all 0.5s;
           }
         }
 
         .heading {
           font-weight: 700;
-          font-size: 20px;
+          font-size: 25px;
           line-height: 30px;
           text-align: center;
-          color: #454545;
+          color: #091932;
           bottom: 20px;
           left: 0;
           right: 0;
           z-index: 1;
           overflow: hidden;
-          margin: 0 auto;
+          margin: 20px auto 0;
           word-break: break-word;
           padding: 0 15px;
         }
@@ -90,17 +125,16 @@
           z-index: 1;
           font-weight: 400;
           font-size: 16px;
-          opacity: 0;
           bottom: -15px;
           line-height: 20px;
           text-align: center;
-          color: #FFFFFF;
+          color: #767878;
           transition: all 0.7s;
           word-break: break-word;
           height: 0;
           left: 50%;
           width: 90%;
-          transform: translate(-50%, -45px);
+          transform: translate(-50%, -55px);
         }
 
         .admin-buttom-move-item,
@@ -157,57 +191,10 @@
           height: 90px;
         }
       }
-
-      .link {
-        opacity: 0;
-        width: 100%;
-        height: 0;
-        position: absolute;
-        transform: translate(0, 0);
-        top: 0;
-        left: 0;
-        z-index: 1;
-      }
-
-      &:hover {
-        &::before {
-          content: '';
-          opacity: 0.6;
-          transition: all 1s;
-        }
-
-        &::after {
-          content: '';
-          opacity: 1;
-          transition: all 1s;
-        }
-
-        .item-media {
-          .txt {
-            opacity: 1;
-            transition: all 2.7s;
-            height: auto;
-          }
-
-          .image {
-            transform: scale(1.1, 1.1);
-          }
-
-          .heading {
-            display: none;
-          }
-        }
-
-        .link {
-          opacity: 1;
-          height: 100%;
-          transition: height 0.2s;
-        }
-      }
     }
 
     .admin-buttom-add-item {
-      width: calc((100% / 2) - 12px);
+      width: calc((100% / 2) - 70px);
       min-height: 504px;
     }
   }
@@ -327,34 +314,6 @@
     padding: 50px 88px;
     overflow: hidden;
 
-    &::after {
-      content: '';
-      left: 0;
-      position: absolute;
-      background: url("../../../assets/img/blocks/service/service-bg.png");
-      display: block;
-      width: 100%;
-      bottom: 0;
-      background-repeat: no-repeat;
-      background-size: cover;
-      height: 70%;
-      right: 0;
-      opacity: 0;
-    }
-
-    &::before {
-      content: '';
-      position: absolute;
-      display: inline-block;
-      width: 100%;
-      height: 100%;
-      z-index: 1;
-      top: 0;
-      left: 0;
-      background: #358BDB;
-      opacity: 0;
-    }
-
     .item-media {
       width: 100%;
 
@@ -376,7 +335,7 @@
         font-size: 20px;
         line-height: 30px;
         text-align: center;
-        color: #454545;
+        color: #091932;
         width: 250px;
         z-index: 1;
         overflow: hidden;
