--- a/wp-content/plugins/wedding/assets/src/sass/blocks/_block.scss
+++ b/wp-content/plugins/wedding/assets/src/sass/blocks/_block.scss
@@ -35,6 +35,12 @@
     position: relative;
     z-index: 1;
 
+    .txt {
+      padding: 50px 10px 35px;
+      color: #091932;
+      font-size: 20px;
+    }
+
     .ttl {
       color: var(--color-text-primary);
       font-size: 40px;
@@ -77,6 +83,19 @@
       .shadow {
         left: 50%;
         transform: translateX(-50%);
+      }
+    }
+  }
+}
+
+
+@media screen and (max-width: 768px) {
+  .block {
+
+    .title {
+      .txt {
+        padding: 20px 10px 0;
+        font-size: 14px;
       }
     }
   }
