--- a/wp-content/plugins/wedding/src/blocks/BannerCommon/style.scss
+++ b/wp-content/plugins/wedding/src/blocks/BannerCommon/style.scss
@@ -24,66 +24,25 @@
       width: 100%;
       object-fit: cover;
       vertical-align: middle;
-      max-height: 630px;
+      max-height: 450px;
     }
   }
 
   .banner-inner {
     position: absolute;
-    bottom: 0;
+    top: 50%;
     left: 50%;
-    transform: translateX(-50%);
+    transform: translate(-50%, -50%);
     color: #fff;
-    margin-bottom: 40px;
+    text-align: center;
 
     .ttl {
-      font-size: 40px;
+      font-size: 30px;
       margin-bottom: 16px;
-      text-align: center;
     }
 
-    .block-breadcrumbs {
-      text-align: center;
-
-      ul {
-        display: flex;
-        justify-content: center;
-
-        li {
-          font-weight: 400;
-          position: relative;
-          padding-right: 10px;
-          margin-right: 5px;
-
-          &:not(:last-child):after {
-            content: "";
-            width: 3px;
-            height: 3px;
-            border-radius: 50%;
-            background-color: #01b9ea;
-            position: absolute;
-            top: 50%;
-            right: 0;
-            transform: translateX(-50%);
-          }
-
-          &:last-child {
-            margin: 0;
-            padding: 0;
-          }
-
-          a {
-            color: #01b9ea;
-            font-weight: 700;
-          }
-        }
-      }
-
-      @media screen and (max-width: 991px) {
-        ul li {
-          font-size: 14px;
-        }
-      }
+    .txt {
+      font-size: 25px;
     }
   }
 
@@ -92,7 +51,11 @@
       width: 70%;
 
       .ttl {
-        font-size: 30px;
+        font-size: 25px;
+      }
+
+      .txt {
+        font-size: 20px;
       }
     }
   }
@@ -104,11 +67,10 @@
       padding: 0 16px;
 
       .ttl {
-        font-size: 20px;
-        margin-bottom: 5px;
+        font-size: 18px;
       }
 
-      .breadcrumbs {
+      .txt {
         font-size: 14px;
       }
     }
