--- a/wp-content/plugins/wedding/src/blocks/Clients/style.scss
+++ b/wp-content/plugins/wedding/src/blocks/Clients/style.scss
@@ -4,30 +4,48 @@
   overflow-x: hidden;
 
   .holder {
-    .wrapper-item,
-    .images-list {
-      display: flex;
-      margin: 60px -16px 0;
-      flex-wrap: wrap;
-      justify-content: flex-start;
-      align-content: center;
+    text-align: center;
+    .btn {
+      &-lnk {
+        background-color: #ff4061;
+        color: #fff;
+        margin: 30px 0;
+        display: inline-block;
+        padding: 10px 41px 10px;
+        font-size: 17px;
+        box-shadow: 0 0 0 2px transparent inset, 0 0 0 2px transparent;
+        border-radius: 5px;
+
+        &:hover {
+          box-shadow: 0 0 0 2px #fff inset, 0 0 0 2px #ff4061;
+          transition: all 0.8s;
+        }
+      }
+    }
+    .wrapper-item {
+      display: grid;
+      grid-template-columns: repeat('auto-fix');
+      grid-template-rows: 540x;
+      grid-gap: 10px;
+      grid-template-areas:
+        "a1 a2 a3"
+        "b1 b2 b3"
+        "b1 b4 b3"
+        "c1 c2 c3"
+        "c4 c2 c5"
+      ;
 
       .item {
-        width: 20%;
-        padding: 9px 20px;
-
         .wrap {
-          padding: 20px 10px;
-          border: 1px solid #A9B5C9;
           display: flex;
           align-items: center;
           justify-content: center;
-          border-radius: 8px;
-          background: #fff;
+          overflow: hidden;
+          height: 100%;
 
           &:hover {
             img {
-              transform: scale(1.1);
+              transform: scale(1.2);
             }
           }
         }
@@ -35,44 +53,98 @@
         img, button {
           -o-object-fit: contain;
           object-fit: contain;
-          height: 70px;
-          transition: 0.3s ease-in-out;
+          transition: 0.5s ease-in-out;
         }
-      }
-    }
 
-    .images-list .item {
-      cursor: pointer;
-
-      button, img {
-        position: relative;
-        border: none;
-      }
-
-      &:hover {
-        opacity: .7;
-      }
-    }
-
-    @media screen and (max-width: 768px) {
-      .wrapper-item,
-      .images-list {
-        .item {
-          width: 25%;
+        &-1 {
+          grid-area: a1;
+        }
+        &-2 {
+          grid-area: a2;
+        }
+        &-3 {
+          grid-area: a3;
+        }
+        &-4 {
+          grid-area: b1;
+        }
+        &-5 {
+          grid-area: b2;
+        }
+        &-6 {
+          grid-area: b3;
+        }
+        &-7 {
+          grid-area: b4;
+        }
+        &-8 {
+          grid-area: c1;
+        }
+        &-9 {
+          grid-area: c2;
+        }
+        &-10 {
+          grid-area: c3;
+        }
+        &-11 {
+          grid-area: c4;
+        }
+        &-12 {
+          grid-area: c5;
         }
       }
     }
 
     @media screen and (max-width: 568px) {
       .wrapper-item {
-        margin: 60px -9px 0;
-      }
-
-      .wrapper-item,
-      .images-list {
+        grid-template-areas:
+          "a1 a2"
+          "b3 b2"
+          "b3 c5"
+          "c3 c2"
+          "c4 c2"
+        ;
         .item {
-          width: 50%;
-          padding: 9px 9px;
+          &-1 {
+            grid-area: a1;
+          }
+          &-2 {
+            grid-area: a2;
+          }
+          &-3 {
+            grid-area: a3;
+            display: none;
+          }
+          &-4 {
+            grid-area: b1;
+            display: none;
+          }
+          &-5 {
+            grid-area: b2;
+          }
+          &-6 {
+            grid-area: b3;
+          }
+          &-7 {
+            grid-area: b4;
+            display: none;
+          }
+          &-8 {
+            grid-area: c1;
+            display: none;
+          }
+          &-9 {
+            grid-area: c2;
+          }
+          &-10 {
+            grid-area: c3;
+          }
+          &-11 {
+            grid-area: c4;
+          }
+          &-12 {
+            grid-area: c5;
+          }
         }
       }
     }
@@ -83,33 +155,93 @@
 
 .block-editor-block-list__block {
   .block-clients {
+    padding: 70px 0;
+    background: #fff;
+    overflow-x: hidden;
+
+    .wrapper-item {
+      width: 100%;
+      grid-template-areas: inherit;
+    }
+
     .holder {
-      .wrapper-item {
-        margin: 0 -20px;
+      text-align: center;
+
+      .images-list {
+        display: grid;
+        grid-template-columns: repeat('auto-fix');
+        grid-template-rows: 540x;
+        grid-gap: 10px;
+        grid-template-areas:
+          "a1 a2 a3"
+          "b1 b2 b3"
+          "b1 b4 b3"
+          "c1 c2 c3"
+          "c4 c2 c5"
+        ;
+
         .item {
           width: 100%;
-        }
+          padding: 0;
 
-        .images-list {
-          .item {
-            width: 20%;
+          .wrap {
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            overflow: hidden;
+            height: 100%;
+
+            &:hover {
+              img {
+                transform: scale(1.2);
+              }
+            }
           }
-        }
 
-        @media screen and (max-width: 768px) {
-          .images-list .item {
-            width: 25%;
+          img, button {
+            -o-object-fit: contain;
+            object-fit: contain;
+            transition: 0.5s ease-in-out;
           }
-        }
 
-        @media screen and (max-width: 568px) {
-          .images-list .item {
-            width: 50%;
+          &-1 {
+            grid-area: a1;
+          }
+          &-2 {
+            grid-area: a2;
+          }
+          &-3 {
+            grid-area: a3;
+          }
+          &-4 {
+            grid-area: b1;
+          }
+          &-5 {
+            grid-area: b2;
+          }
+          &-6 {
+            grid-area: b3;
+          }
+          &-7 {
+            grid-area: b4;
+          }
+          &-8 {
+            grid-area: c1;
+          }
+          &-9 {
+            grid-area: c2;
+          }
+          &-10 {
+            grid-area: c3;
+          }
+          &-11 {
+            grid-area: c4;
+          }
+          &-12 {
+            grid-area: c5;
           }
         }
       }
     }
   }
 }
-
-/* END: Custom Admin */
