Update code Contact và Footer

--- a/wp-content/plugins/wedding/src/blocks/Clients/style.scss
+++ b/wp-content/plugins/wedding/src/blocks/Clients/style.scss
@@ -1,5 +1,5 @@
 .block-clients {
-  padding: 70px 0;
+  padding: 0 0 70px;
   background: #fff;
   overflow-x: hidden;
 
@@ -9,7 +9,7 @@
       &-lnk {
         background-color: #ff4061;
         color: #fff;
-        margin: 30px 0;
+        margin: 0 0 35px;
         display: inline-block;
         padding: 10px 41px 10px;
         font-size: 17px;
