--- a/wp-content/themes/wedding/src/sass/base/_header_new.scss
+++ b/wp-content/themes/wedding/src/sass/base/_header_new.scss
@@ -110,7 +110,7 @@
 
         a {
           // color: var(--color-text-secondary);
-          color: #454545;
+          color: #fff;
           font-weight: 400;
           position: relative;
           cursor: pointer;
