--- a/wp-content/plugins/wedding/assets/src/sass/blocks/_block.scss
+++ b/wp-content/plugins/wedding/assets/src/sass/blocks/_block.scss
@@ -36,7 +36,7 @@
     z-index: 1;
 
     .txt {
-      padding: 50px 10px 35px;
+      padding: 35px 10px;
       color: #091932;
       font-size: 20px;
     }
@@ -47,7 +47,7 @@
       font-weight: normal;
       z-index: 1;
       display: inline-block;
-      padding-top: 50px;
+      padding-top: 15px;
 
       strong {
         font-weight: 700;
