--- a/wp-content/plugins/wedding/src/blocks/Contact/style.scss
+++ b/wp-content/plugins/wedding/src/blocks/Contact/style.scss
@@ -82,7 +82,7 @@
             font-size: 16px;
             border: none;
             background-color: #fff;
-            padding: 8px 20px;
+            padding: 8px 10px;
             box-shadow: none;
             margin-top: 8px;
 
@@ -207,5 +207,117 @@
       }
     }
     /* END: Responsive */
+  }
+}
+
+.modal {
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 1060;
+  display: none;
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+  outline: 0;
+
+  &.modal-contact {
+    padding-top: 150px;
+    background-color: rgba(0, 0, 0, 0.4);
+
+    .modal-dialog {
+      position: relative;
+      width: auto;
+      margin: 8px;
+      pointer-events: none;
+
+      .modal-content {
+        border-radius: 5px;
+        max-width: 400px;
+        width: 100%;
+        margin: 0 auto;
+        position: relative;
+        display: flex;
+        flex-direction: column;
+        width: 100%;
+        pointer-events: auto;
+        background-color: #fff;
+        background-clip: padding-box;
+        border: 1px solid rgba(0, 0, 0, 0.2);
+        border-radius: 0.3rem;
+        outline: 0;
+        border: 5px solid #ff4061;
+
+        .modal-header {
+          display: flex;
+          flex-direction: column;
+          flex-shrink: 0;
+          align-items: center;
+          justify-content: center;
+          padding: 1rem 1rem;
+          border-top-left-radius: calc(0.3rem - 1px);
+          border-top-right-radius: calc(0.3rem - 1px);
+
+          .icon-box {
+            color: #fff;
+            margin: 0 auto;
+            width: 200px;
+            z-index: 9;
+            text-align: center;
+
+            img {
+              max-width: 100%;
+              height: auto;
+            }
+          }
+
+          .modal-title {
+            text-align: center;
+            font-size: 26px;
+            margin: 0;
+            width: 100%;
+            line-height: 1.5;
+          }
+        }
+
+        .modal-body {
+          position: relative;
+          flex: 1 1 auto;
+          padding: 1rem;
+          .message {
+            margin-bottom: 16px;
+            font-size: 24px;
+            text-align: center;
+          }
+        }
+
+        .modal-close {
+          display: flex;
+          justify-content: center;
+          padding: 20px 0 40px;
+
+          .close-contact {
+            background: none;
+            border: none;
+            outline: none;
+
+            &.close-contact--btn {
+              border-radius: 4px;
+              min-width: 130px;
+              background: #ff4061;
+              padding: 8px 13px;
+              font-size: 16px;
+              color: #fff;
+              box-shadow: 0 0 0 2px transparent inset, 0 0 0 2px transparent;
+            }
+
+            &:hover {
+              transition: all 0.2s linear;
+              box-shadow: 0 0 0 2px #fff inset, 0 0 0 2px #ff4061;
+            }
+          }
+        }
+      }
+    }
   }
 }
