--- a/wp-content/themes/wedding/src/sass/pages/home.scss
+++ b/wp-content/themes/wedding/src/sass/pages/home.scss
@@ -1,82 +1,48 @@
-/* loader */
+#loader-wrapper {
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  z-index: 10000;
+  background: #ffffff87;
+  animation-name: backdiv;
+  animation-duration: 1s; 
+  animation-iteration-count: infinite;
 
-#loader {
-  display: block;
-  position: relative;
-  left: 50%;
-  top: 50%;
-  width: 150px;
-  height: 150px;
-  margin: -75px 0 0 -75px;
-  border-radius: 50%;
-  border: 3px solid transparent;
-  border-top-color: #3498db;
-  animation: spin 2s linear infinite;
-  z-index: 1001;
-
-  &:before, &::after {
-    content: "";
+  .heart{
     position: absolute;
-    border-radius: 50%;
-    border: 3px solid transparent;
-  }
+    top:50%;
+    left:50%;
+    transform: translate(-50%,-50%);
 
-  &:before {
-    top: 5px;
-    left: 5px;
-    right: 5px;
-    bottom: 5px;
-    border-top-color: #e74c3c;
-    animation: spin 3s linear infinite;
-  }
-
-  &:after {
-    top: 15px;
-    left: 15px;
-    right: 15px;
-    bottom: 15px;
-    border-top-color: #f9c922;
-    animation: spin 1.5s linear infinite;
-  }
-
-  &-wrapper {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    z-index: 1000;
-
-    .loader-section {
-      position: fixed;
-      top: 0;
-      width: 51%;
-      height: 100%;
-      background: #fff;
-      z-index: 1000;
-      transform: translateX(0);
-    }
-
-    .loader-section.section {
-      &-left {
-        left: 0;
-      }
-
-      &-right {
-        right: 0;
-      }
-    }
-  }
-
-  @keyframes spin {
-    0% {
-      transform: rotate(0deg);
-    }
-
-    100% {
-      transform: rotate(360deg);
+    i.fa-heart{
+      color: #000;
+      font-size: 90px;
+      animation: beat 0.9s infinite;
+      text-shadow:
+          0 0 5px red,
+          0 0 45px red,
+          0 0 90px red
+      ;
     }
   }
 }
 
-/* END: loader */
+@keyframes beat{
+  0%{
+      transform: scale(1);
+  }
+  20%{
+      transform: scale(1.15);
+  }
+  40%{
+      transform: scale(1.4);
+  }
+}
+
+@keyframes backdiv {
+  50% {
+    background: #ffe6f273;
+  }
+}
