--- a/wp-content/plugins/wedding/src/blocks/BannerCommon/style.scss
+++ b/wp-content/plugins/wedding/src/blocks/BannerCommon/style.scss
@@ -1,7 +1,7 @@
 /* Banner */
 .common-block-banner {
   position: relative;
-  margin-bottom: 35px;
+  margin: 65px 0 35px;
 
   .overlay {
     position: absolute;
@@ -48,15 +48,19 @@
   }
 
   @media screen and (max-width: 991px) {
-    .banner-inner {
-      width: 70%;
+    & {
+      margin: 25px 0 35px;
 
-      .ttl {
-        font-size: 25px;
-      }
+      .banner-inner {
+        width: 70%;
 
-      .txt {
-        font-size: 20px;
+        .ttl {
+          font-size: 25px;
+        }
+
+        .txt {
+          font-size: 20px;
+        }
       }
     }
   }
