--- a/wp-content/plugins/wedding/src/blocks/ServiceHead/style.scss
+++ b/wp-content/plugins/wedding/src/blocks/ServiceHead/style.scss
@@ -1,7 +1,7 @@
 .block-service-page {
   /* Head */
   .head {
-    padding: 35px 0 60px;
+    padding: 70px 0 35px;
 
     &.head--reverse {
       .holder {
@@ -86,15 +86,8 @@
       }
     }
 
-    @media screen and (max-width: 992px) {
-      & {
-        padding: 35px 0;
-      }
-    }
-
     @media screen and (max-width: 767px) {
       & {
-        padding: 0 0 30px;
 
         .holder .wrap {
           .content {
@@ -165,15 +158,19 @@
   }
   /* END: Head */
 
-  @media screen and (max-width: 992px) {
+  @media screen and (max-width: 767px) {
     & {
-      margin-bottom: 50px;
+      margin: 35px 0;
+
+      .head {
+        padding: 0;
+      }
     }
   }
 
-  @media screen and (max-width: 767px) {
+  @media screen and (max-width: 414px) {
     & {
-      margin-bottom: 20px;
+      margin: 25px 0;
     }
   }
 }
