--- a/wp-content/plugins/wedding/src/blocks/HeaderTitle/style.scss
+++ b/wp-content/plugins/wedding/src/blocks/HeaderTitle/style.scss
@@ -1,3 +1,9 @@
 .block-header-title {
   margin-bottom: 0;
+
+  @media screen and (max-width: 768px) {
+    & {
+      margin-bottom: 35px;
+    }
+  }
 }
