--- a/wp-content/themes/wedding/src/sass/base/_header_new.scss
+++ b/wp-content/themes/wedding/src/sass/base/_header_new.scss
@@ -70,9 +70,9 @@
 
       .line {
         width: 100%;
-        height: 3px;
+        height: 2px;
         // background: var(--color-text-secondary);
-        background: #454545;
+        background: #fff;
         margin-bottom: 5px;
         transition: all 0.3s;
 
@@ -94,7 +94,7 @@
       .custom-logo-color {
         img {
           width: 100%;
-          max-width: 155px;
+          max-width: 139px;
           display: block;
           object-fit: cover;
         }
@@ -241,7 +241,7 @@
           padding: 0;
 
           .custom-logo-color img {
-            max-width: 175px;
+            max-width: 139px;
           }
         }
 
@@ -449,7 +449,7 @@
 
           &:first-child {
             margin: 0;
-            width: 33px;
+            width: 22px;
             transform: rotate(45deg) translate(4px, 10.5px);
           }
 
@@ -458,8 +458,8 @@
           }
 
           &:last-child {
-            width: 33px;
-            transform: rotate(-45deg) translate(-3px, -3.5px);
+            width: 22px;
+            transform: rotate(-45deg) translate(-4px,-2.5px);
           }
         }
       }
