--- a/wp-content/plugins/wedding/src/blocks/Couple/style.scss
+++ b/wp-content/plugins/wedding/src/blocks/Couple/style.scss
@@ -1,4 +1,4 @@
-.block-services-new {
+.block-couple {
   padding: 35px 0;
   background: #fff;
   overflow-x: hidden;
@@ -316,7 +316,7 @@
 
 /* Custom Admin*/
 .block-editor-block-list__block {
-  .block-services-new {
+  .block-couple {
     .wrapper-item {
       .lnk {
         text-decoration: none;
