--- a/wp-content/plugins/wedding/src/blocks/Gallery/style.scss
+++ b/wp-content/plugins/wedding/src/blocks/Gallery/style.scss
@@ -1,4 +1,4 @@
-.block-clients {
+.block-gallery {
   padding: 0 0 70px;
   background: #fff;
   overflow-x: hidden;
@@ -154,7 +154,7 @@
 /* Custom Admin */
 
 .block-editor-block-list__block {
-  .block-clients {
+  .block-gallery {
     padding: 70px 0;
     background: #fff;
     overflow-x: hidden;
