Update code animation heart

--- a/wp-content/plugins/wedding/src/blocks/Event/style.scss
+++ b/wp-content/plugins/wedding/src/blocks/Event/style.scss
@@ -63,6 +63,8 @@
             border: 2px solid transparent;
             display: block;
             margin-top: 20px;
+            position: relative;
+            z-index: 2;
 
             &:hover {
               background-color: white;
