--- a/wp-content/plugins/wedding/src/blocks/Couple/style.scss
+++ b/wp-content/plugins/wedding/src/blocks/Couple/style.scss
@@ -36,6 +36,7 @@
           transition: transform 1s;
           height: 450px;
           position: relative;
+          z-index: 2;
 
           img {
             position: absolute;
@@ -193,6 +194,7 @@
           position: relative;
           width: 100%;
           height: 90px;
+          z-index: 2;
         }
       }
     }
@@ -224,6 +226,8 @@
         box-shadow: 0 0 0 2px transparent inset, 0 0 0 2px transparent;
         border-radius: 8px;
         border: 2px solid transparent;
+        position: relative;
+        z-index: 2;
 
         &:hover {
           transition: all 0.8s;
