--- a/wp-content/plugins/wedding/src/blocks/Leadership/style.scss
+++ b/wp-content/plugins/wedding/src/blocks/Leadership/style.scss
@@ -17,6 +17,8 @@
     flex-wrap: wrap;
     align-items: stretch;
     padding: 70px 0 0;
+    position: relative;
+    z-index: 2;
 
     .item {
       width: 20%;
