Update code Fix img IOS

--- a/wp-content/themes/wedding/src/sass/base/_header_new.scss
+++ b/wp-content/themes/wedding/src/sass/base/_header_new.scss
@@ -96,7 +96,7 @@
           width: 100%;
           max-width: 139px;
           display: block;
-          object-fit: cover;
+          object-fit: contain;
         }
       }
     }
